<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout">


        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"

            android:src="@drawable/background_profile"
            app:srcCompat="@drawable/background_profile" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"

            android:clickable="true"
            app:civ_border_width="3dp"
            app:civ_border_color="#fff"

            android:id="@+id/im_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-130dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/githublogo" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="#ff5252"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="GitHub Name"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Account"
                android:textColor="#fff"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_height="62dp"
                android:layout_width="62dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/tv_account"
                android:layout_alignStart="@+id/tv_account" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/repo_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_layout"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            >


            <EditText
                android:id="@+id/input_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/hint_query" />


            <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Search User"
                android:textColor="#fff"
                android:background="@color/colorPrimary"
                android:onClick="onClickSearchUser"
                />

            <!--Adicionado apos a busca por usuario-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_numbers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>


