<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_reset"
        app:showAsAction="ifRoom"/>
</menu>